force-app/main/default/objects/geopointe__GP_Device_Event__c/geopointe__GP_Device_Event__c.object-meta.xml
<CustomObject>
    <label>Geopointe Device Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Device Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>