force-app/main/default/objects/geopointe__GP_Device_Event__c/fields/geopointe__Auto_Check_In_Record__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Auto_Check_In_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auto Check In Record</label>
    <referenceTo>geopointe__Check_In__c</referenceTo>
    <relationshipLabel>Geopointe Device Events</relationshipLabel>
    <relationshipName>Geopointe_Device_Events</relationshipName>
    <type>Lookup</type>
</CustomField>