force-app/main/default/objects/geopointe__GP_Device_Event__c/fields/geopointe__Auto_Check_In_Status__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Auto_Check_In_Status__c</fullName>
    <label>Auto Check In Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NOT_APPLICABLE</fullName>
                <default>true</default>
                <label>NOT_APPLICABLE</label>
            </value>
            <value>
                <fullName>INITIATED</fullName>
            </value>
            <value>
                <fullName>COMPLETED_NOTHING_NEARBY</fullName>
            </value>
            <value>
                <fullName>COMPLETED_SUCCESS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>