force-app/main/default/objects/geopointe__GP_Device_Event__c/fields/geopointe__Auto_Check_Out_Status__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Auto_Check_Out_Status__c</fullName>
    <label>Auto Check Out Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Initiating</fullName>
            </value>
            <value>
                <fullName>Nothing Nearby</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>