force-app/main/default/objects/geopointe__GP_Device_Event__c/fields/geopointe__Device_Mileage__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Device_Mileage__c</fullName>
    <label>Device Mileage</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>