force-app/main/default/objects/geopointe__GP_Device_Event__c/fields/geopointe__Eid__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Eid__c</fullName>
    <label>Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>