force-app/main/default/objects/geopointe__GP_Device_Event__c/fields/geopointe__Event_Code__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Event_Code__c</fullName>
    <label>Event Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IGON</fullName>
            </value>
            <value>
                <fullName>IGOFF</fullName>
            </value>
            <value>
                <fullName>START</fullName>
            </value>
            <value>
                <fullName>STOP</fullName>
            </value>
            <value>
                <fullName>DISCON</fullName>
            </value>
            <value>
                <fullName>CONN</fullName>
            </value>
            <value>
                <fullName>HDACC</fullName>
            </value>
            <value>
                <fullName>HDDEC</fullName>
            </value>
            <value>
                <fullName>HDLFT</fullName>
            </value>
            <value>
                <fullName>HDRGT</fullName>
            </value>
            <value>
                <fullName>COLL</fullName>
            </value>
            <value>
                <fullName>IDLE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>