force-app/main/default/objects/geopointe__GP_Device_Event__c/fields/geopointe__Event_Date__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Event_Date__c</fullName>
    <label>Event Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>