force-app/main/default/objects/geopointe__GP_Device_Event__c/fields/geopointe__Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>